Added the ability to create contact (#11)
* Moved constants to src

* Added ability to create contact

* Removed unnecessary classes from Notes form

--- a/app/javascript/src/translations/en.json
+++ b/app/javascript/src/translations/en.json
@@ -8,10 +8,14 @@
     "createdAt": "Created at"
   },
   "labels": {
+    "email": "Email address",
+    "firstName": "First name",
+    "lastName": "Last name",
     "note_one": "Note",
     "note_other": "Notes",
     "contact_one": "Contact",
     "contact_other": "Contacts",
+    "role": "Role",
     "title": "Title",
     "description": "Description",
     "assignedContact": "Assigned contact",
@@ -32,7 +36,8 @@
   },
   "validations": {
     "required": "{{what}} is required.",
-    "atLeastOne": "At least one {{what}} is required."
+    "atLeastOne": "At least one {{what}} is required.",
+    "invalid": "{{what}} is invalid."
   },
   "alerts": {
     "delete": {
